# proyectoAlgoritmos

./: .gitignore
context/: lineamiento.md  ssd-1.md  ssd-2.md
context/.claude/: instructions.md
context/handoffs/: first.md  second.md
context/sdd-3/: architecture.md  main.md  planning.md  testing.md
document/: tecnico.tex
source/: pyproject.toml
source/Analysis/: main.py  resultados_comparacion.csv
source/GeoMIP/.assets/: Sys8.csv
source/GeoMIP/data/: creation.py
source/GeoMIP/results/: resultados_Geometric.xlsx
source/GeoMIP/src/Method2_Dynamic_Programming_Reformulation/: validar_tv02.py
source/GeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/: main.py
source/GeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/controllers/strategies/: force.py  geometric.py  kgeomip.py  phi.py  q_nodes.py
source/GeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/models/base/: sia.py
source/QNodes/: exec.py
source/QNodes/src/: main.py
source/QNodes/src/controllers/: manager.py
source/QNodes/src/strategies/: force.py  kqnodes.py  phi.py  q_nodes.py
