[project]
name = "source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyinstrument>=5.1.2",
    "pyphi>=1.2.0",
    "pyttsx3>=2.99",
]

[tool.uv.workspace]
members = [
    "Analysis",
]
